{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 289,
  "lineage": "9588cea9-2895-3fe7-04e8-4b3143439e62",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "hsigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:998306678776:internet-gateway/igw-00545efe7979b95a2",
            "id": "igw-00545efe7979b95a2",
            "owner_id": "998306678776",
            "tags": {
              "Name": "hs-igw"
            },
            "tags_all": {
              "Name": "hs-igw"
            },
            "vpc_id": "vpc-06e7ad04fc756a65f"
          },
          "dependencies": [
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "hsalb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:998306678776:loadbalancer/app/hs-alb/8349b6942211642e",
            "arn_suffix": "app/hs-alb/8349b6942211642e",
            "desync_mitigation_mode": "defensive",
            "dns_name": "hs-alb-537579074.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:998306678776:loadbalancer/app/hs-alb/8349b6942211642e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0eae508708297c1bf"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08b5adba9672ffe1a"
              },
              {
                "subnet_id": "subnet-093039a1b78073db5"
              }
            ],
            "subnets": [
              "subnet-08b5adba9672ffe1a",
              "subnet-093039a1b78073db5"
            ],
            "tags": {
              "Name": "hs-alb"
            },
            "tags_all": {
              "Name": "hs-alb"
            },
            "vpc_id": "vpc-06e7ad04fc756a65f",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.hssg",
            "aws_subnet.hssubnet1",
            "aws_subnet.hssubnet2",
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "hshttp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:998306678776:listener/app/hs-alb/8349b6942211642e/0ef18df23b597694",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found - hs",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:998306678776:listener/app/hs-alb/8349b6942211642e/0ef18df23b597694",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:998306678776:loadbalancer/app/hs-alb/8349b6942211642e",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hsalb",
            "aws_security_group.hssg",
            "aws_subnet.hssubnet1",
            "aws_subnet.hssubnet2",
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "hsalbrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:998306678776:targetgroup/hs-alb-tg/9319cbf2ffc6a724",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:998306678776:listener-rule/app/hs-alb/8349b6942211642e/0ef18df23b597694/68329b9f3a8ea86a",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:998306678776:listener-rule/app/hs-alb/8349b6942211642e/0ef18df23b597694/68329b9f3a8ea86a",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:998306678776:listener/app/hs-alb/8349b6942211642e/0ef18df23b597694",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.hsalb",
            "aws_lb_listener.hshttp",
            "aws_lb_target_group.hsalbtg",
            "aws_security_group.hssg",
            "aws_subnet.hssubnet1",
            "aws_subnet.hssubnet2",
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "hsalbtg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:998306678776:targetgroup/hs-alb-tg/9319cbf2ffc6a724",
            "arn_suffix": "targetgroup/hs-alb-tg/9319cbf2ffc6a724",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 5,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:998306678776:targetgroup/hs-alb-tg/9319cbf2ffc6a724",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hs-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06e7ad04fc756a65f"
          },
          "dependencies": [
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "hsdefaultroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00545efe7979b95a2",
            "id": "r-rtb-048e9fdbb5aa2c4f41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-048e9fdbb5aa2c4f4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.hsigw",
            "aws_route_table.hsrt",
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "hsrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:998306678776:route-table/rtb-048e9fdbb5aa2c4f4",
            "id": "rtb-048e9fdbb5aa2c4f4",
            "owner_id": "998306678776",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "hs-rt"
            },
            "tags_all": {
              "Name": "hs-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-06e7ad04fc756a65f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hsrtassociation1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a8c505bcaa0fa991",
            "route_table_id": "rtb-048e9fdbb5aa2c4f4",
            "subnet_id": "subnet-093039a1b78073db5"
          },
          "dependencies": [
            "aws_route_table.hsrt",
            "aws_subnet.hssubnet1",
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "hsrtassociation2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0405473d987873364",
            "route_table_id": "rtb-048e9fdbb5aa2c4f4",
            "subnet_id": "subnet-08b5adba9672ffe1a"
          },
          "dependencies": [
            "aws_route_table.hsrt",
            "aws_subnet.hssubnet2",
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "hssg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:998306678776:security-group/sg-0eae508708297c1bf",
            "description": "hs SG",
            "egress": [],
            "id": "sg-0eae508708297c1bf",
            "ingress": [],
            "name": "hs SG",
            "name_prefix": "",
            "owner_id": "998306678776",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06e7ad04fc756a65f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.hsvpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "hssginbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3465008428",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0eae508708297c1bf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.hssg",
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "hssgoutbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-333380433",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0eae508708297c1bf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.hssg",
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hssubnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:998306678776:subnet/subnet-093039a1b78073db5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093039a1b78073db5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998306678776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hs-subnet1"
            },
            "tags_all": {
              "Name": "hs-subnet1"
            },
            "vpc_id": "vpc-06e7ad04fc756a65f"
          },
          "dependencies": [
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "hssubnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:998306678776:subnet/subnet-08b5adba9672ffe1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b5adba9672ffe1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "998306678776",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hs-subnet2"
            },
            "tags_all": {
              "Name": "hs-subnet2"
            },
            "vpc_id": "vpc-06e7ad04fc756a65f"
          },
          "dependencies": [
            "aws_vpc.hsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "hsvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:998306678776:vpc/vpc-06e7ad04fc756a65f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-08715750f89ad5e1e",
            "default_route_table_id": "rtb-060feba2729757f94",
            "default_security_group_id": "sg-064e6828bb5f894d5",
            "dhcp_options_id": "dopt-683f5403",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06e7ad04fc756a65f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-060feba2729757f94",
            "owner_id": "998306678776",
            "tags": {
              "Name": "hs-vpc"
            },
            "tags_all": {
              "Name": "hs-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}